Implement calculator logic
This change implements all of the calculator logic. Users can
enter numbers and decimals.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <div class="calculator">
-        <div class="display">0</div>
+        <div class="display">&nbsp;</div>
         <div class="logo">
           <div class="brand">TEXAS INSTRUMENTS</div>
           <div class="model">TI-108</div>
@@ -31,33 +31,31 @@
         <br />
         <div class="button-container">
           <div class="left-buttons">
-            <div class="red">
-              <div>+/-</div>
-            </div>
-            <div class="red">√</div>
-            <div class="red">%</div>
-            <div class="red">MRC</div>
-            <div class="red">M-</div>
-            <div class="red">M+</div>
-            <div class="white pressable">7</div>
-            <div class="white pressable">8</div>
-            <div class="white pressable">9</div>
-            <div class="white pressable">4</div>
-            <div class="white pressable">5</div>
-            <div class="white pressable">6</div>
-            <div class="white pressable">1</div>
-            <div class="white pressable">2</div>
-            <div class="white pressable">3</div>
-            <div class="red">ON/C</div>
-            <div class="white pressable">0</div>
-            <div class="white">.</div>
+            <button class="red">+/-</button>
+            <button class="red">√</button>
+            <button class="red">%</button>
+            <button class="red">MRC</button>
+            <button class="red">M-</button>
+            <button class="red">M+</button>
+            <button class="white number">7</button>
+            <button class="white number">8</button>
+            <button class="white number">9</button>
+            <button class="white number">4</button>
+            <button class="white number">5</button>
+            <button class="white number">6</button>
+            <button class="white number">1</button>
+            <button class="white number">2</button>
+            <button class="white number">3</button>
+            <button class="red on-clear">ON/C</button>
+            <button class="white number">0</button>
+            <button class="white number dot">.</button>
           </div>
           <div class="operators">
-            <div class="red">÷</div>
-            <div class="red">᙮</div>
-            <div class="red">-</div>
-            <div class="red">+</div>
-            <div class="red">=</div>
+            <button class="red operator">÷</button>
+            <button class="red operator">᙮</button>
+            <button class="red operator">-</button>
+            <button class="red operator">+</button>
+            <button class="red operator">=</button>
           </div>
         </div>
       </div>
